opam-version: "2.0"
name:         "spf"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/spf"
bug-reports:  "https://github.com/dinosaure/spf/issues"
dev-repo:     "git+https://github.com/dinosaure/spf.git"
doc:          "https://dinosaure.github.io/spf/"
license:      "MIT"
synopsis:     "SPF implementation in OCaml"
description: """ocaml-spf is an implementation of the SPF verifier
in OCaml compatible with MirageOS."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "rresult"
  "logs"
  "colombe"
  "mrmime"
  "ipaddr"      {>= "5.2.0"}
  "hmap"
  "angstrom"
  "domain-name"
  "dns"         {>= "5.0.1"}
  "lwt"
  "dns-client"
  "alcotest" {with-test}
]

pin-depends: [
  [ "colombe.dev" "git+https://github.com/mirage/colombe.git#a2c706f14e5b890d9b6e7b812163fd030bd4936d" ]
  [ "mrmime.dev" "git+https://github.com/mirage/mrmime.git#39101eb0049ae4cf1db49ee2179cada74ca5bd6a" ]
  [ "dns.dev" "git+https://github.com/mirage/ocaml-dns.git#d99eff3429f60a5a9eef262f45b4e7d12ab251e5" ]
  [ "dns-client.dev" "git+https://github.com/mirage/ocaml-dns.git#d99eff3429f60a5a9eef262f45b4e7d12ab251e5" ]
]
