opam-version: "2.0"
name:         "spf"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/spf"
bug-reports:  "https://github.com/dinosaure/spf/issues"
dev-repo:     "git+https://github.com/dinosaure/spf.git"
doc:          "https://dinosaure.github.io/spf/"
license:      "MIT"
synopsis:     "SPF implementation in OCaml"
description: """ocaml-spf is an implementation of the SPF verifier
in OCaml compatible with MirageOS."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "rresult"
  "logs"
  "colombe"
  "mrmime"
  "ipaddr"      {>= "5.2.0"}
  "hmap"
  "angstrom"
  "domain-name"
  "dns"         {>= "5.0.1"}
  "lwt"
  "dns-client"
  "alcotest" {with-test}
]

pin-depends: [
  [ "colombe.dev" "git+https://github.com/mirage/colombe.git#18b7b6940ac4ebce59def3c1107ede2cd21e6515" ]
  [ "mrmime.dev" "git+https://github.com/mirage/mrmime.git#9784a03cdbbda61f250ec5c0a995ae9263fbcf4a" ]
  [ "dns.dev" "git+https://github.com/mirage/ocaml-dns.git#1cc956368241beca6157eb4a3351174837e2bbd5" ]
  [ "dns-client.dev" "git+https://github.com/mirage/ocaml-dns.git#1cc956368241beca6157eb4a3351174837e2bbd5" ]
]
