opam-version: "2.0"
name:         "spf"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/spf"
bug-reports:  "https://github.com/dinosaure/spf/issues"
dev-repo:     "git+https://github.com/dinosaure/spf.git"
doc:          "https://dinosaure.github.io/spf/"
license:      "MIT"
synopsis:     "SPF implementation in OCaml"
description: """ocaml-spf is an implementation of the SPF verifier
in OCaml compatible with MirageOS."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "rresult"
  "logs"
  "colombe"
  "mrmime"      {>= "0.5.0"}
  "ipaddr"      {>= "5.2.0"}
  "hmap"
  "angstrom"
  "domain-name"
  "dns"         {>= "5.0.1"}
  "lwt"
  "dns-client"  {>= "6.1.0"}
  "astring"
  "alcotest" {with-test}
]
