opam-version: "2.0"
name:         "uspf"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/uspf"
bug-reports:  "https://github.com/mirage/uspf/issues"
dev-repo:     "git+https://github.com/mirage/uspf.git"
doc:          "https://mirage.github.io/uspf/"
license:      "MIT"
synopsis:     "SPF implementation in OCaml"
description: """uspf is an implementation of the SPF verifier
in OCaml compatible with MirageOS."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "uspf"        {= version}
  "dns-client"  {>= "7.0.0"}
  "alcotest"    {with-test}
  "rresult"     {>= "0.7.0" & with-test}
]
