opam-version: "2.0"
name:         "uspf"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/uspf"
bug-reports:  "https://github.com/dinosaure/uspf/issues"
dev-repo:     "git+https://github.com/dinosaure/uspf.git"
doc:          "https://dinosaure.github.io/uspf/"
license:      "MIT"
synopsis:     "SPF implementation in OCaml"
description: """uspf is an implementation of the SPF verifier
in OCaml compatible with MirageOS."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "logs"
  "colombe"     {>= "0.4.2"}
  "mrmime"      {>= "0.5.0"}
  "ipaddr"      {>= "5.2.0"}
  "hmap"
  "angstrom"    {>= "0.15.0"}
  "domain-name"
  "dns"         {>= "5.0.1"}
  "lwt"
  "dns-client"  {>= "6.1.0"}
  "astring"
  "fmt"         {>= "0.8.9"}
  "alcotest"    {with-test}
  "rresult"     {>= "0.7.0" & with-test}
]
